--- a/owncloudApp/src/main/res/values-fr/strings.xml
+++ b/owncloudApp/src/main/res/values-fr/strings.xml
@@ -17,6 +17,7 @@
   <string name="actionbar_sort_by_date">Du plus ancien au plus récent</string>
   <string name="actionbar_sort_by_size">Du plus petit au plus grand</string>
   <string name="drawer_item_all_files">Tous les fichiers</string>
+  <string name="drawer_item_only_available_offline">Disponible hors-ligne</string>
   <string name="drawer_item_settings">Paramètres</string>
   <string name="drawer_item_uploads_list">Envois</string>
   <string name="drawer_close">Fermer</string>
