--- a/owncloudApp/src/main/res/values-it/strings.xml
+++ b/owncloudApp/src/main/res/values-it/strings.xml
@@ -19,6 +19,7 @@
   <string name="actionbar_sort_by_date">Più vecchio - Più Recente</string>
   <string name="actionbar_sort_by_size">Più piccolo - Più grande</string>
   <string name="drawer_item_all_files">Tutti i file</string>
+  <string name="drawer_item_only_available_offline">Disponibile non in linea</string>
   <string name="drawer_item_settings">Impostazioni</string>
   <string name="drawer_item_uploads_list">Caricamenti</string>
   <string name="drawer_close">Chiudi</string>
