--- a/owncloudApp/src/main/res/values-ja-rJP/strings.xml
+++ b/owncloudApp/src/main/res/values-ja-rJP/strings.xml
@@ -14,6 +14,7 @@
   <string name="actionbar_sort_title">ソート: </string>
   <string name="actionbar_sort_by_name">名前順</string>
   <string name="drawer_item_all_files">すべてのファイル</string>
+  <string name="drawer_item_only_available_offline">オフラインが利用可能です</string>
   <string name="drawer_item_settings">設定</string>
   <string name="drawer_item_uploads_list">アップロード</string>
   <string name="drawer_close">閉じる</string>
