--- a/owncloudApp/src/main/res/values-nb-rNO/strings.xml
+++ b/owncloudApp/src/main/res/values-nb-rNO/strings.xml
@@ -14,6 +14,7 @@
   <string name="actionbar_sort_title">Sorter etter</string>
   <string name="actionbar_sort_by_name">A-Z</string>
   <string name="drawer_item_all_files">Alle filer</string>
+  <string name="drawer_item_only_available_offline">Tilgjengelig frakoblet</string>
   <string name="drawer_item_settings">Innstillinger</string>
   <string name="drawer_item_uploads_list">Opplastinger</string>
   <string name="drawer_close">Lukk</string>
