--- a/owncloudApp/src/main/res/values-nl/strings.xml
+++ b/owncloudApp/src/main/res/values-nl/strings.xml
@@ -13,6 +13,7 @@
   <string name="actionbar_sort_title">Sorteer op</string>
   <string name="actionbar_sort_by_name">A-Z</string>
   <string name="drawer_item_all_files">Alle bestanden</string>
+  <string name="drawer_item_only_available_offline">Beschikbaar off-line</string>
   <string name="drawer_item_settings">Instellingen</string>
   <string name="drawer_item_uploads_list">Uploads</string>
   <string name="drawer_close">Sluiten</string>
