--- a/owncloudApp/src/main/res/values-sv/strings.xml
+++ b/owncloudApp/src/main/res/values-sv/strings.xml
@@ -15,6 +15,7 @@
   <string name="actionbar_sort_by_date">Äldst - Nyast</string>
   <string name="actionbar_sort_by_size">Minst - Störst</string>
   <string name="drawer_item_all_files">Alla filer</string>
+  <string name="drawer_item_only_available_offline">Tillgänglig offline</string>
   <string name="drawer_item_settings">Inställningar</string>
   <string name="drawer_item_uploads_list">Uppladdningar</string>
   <string name="drawer_close">Stäng</string>
