--- a/owncloudApp/src/main/res/values-zh-rCN/strings.xml
+++ b/owncloudApp/src/main/res/values-zh-rCN/strings.xml
@@ -19,6 +19,7 @@
   <string name="actionbar_sort_by_date">日期</string>
   <string name="actionbar_sort_by_size">最小 - 最大</string>
   <string name="drawer_item_all_files">全部文件</string>
+  <string name="drawer_item_only_available_offline">离线可用</string>
   <string name="drawer_item_settings">设置</string>
   <string name="drawer_item_uploads_list">上传</string>
   <string name="drawer_close">关闭</string>
