--- a/owncloudApp/src/main/res/values-zh-rTW/strings.xml
+++ b/owncloudApp/src/main/res/values-zh-rTW/strings.xml
@@ -13,6 +13,7 @@
   <string name="actionbar_sort_title">排序依照</string>
   <string name="actionbar_sort_by_name">A-Z</string>
   <string name="drawer_item_all_files">所有檔案</string>
+  <string name="drawer_item_only_available_offline">離線可使用</string>
   <string name="drawer_item_settings">設定</string>
   <string name="drawer_item_uploads_list">上傳</string>
   <string name="drawer_close"> 關閉</string>
