--- a/docs/modules/ROOT/pages/release_notes.adoc
+++ b/docs/modules/ROOT/pages/release_notes.adoc
@@ -1,13 +1,56 @@
 = Release Notes
+:dav4jvm-url: https://gitlab.com/bitfireAT/dav4jvm
+:okhttp-url: http://square.github.io/okhttp/
 
-* xref:#_changes_in_2_8_0[Changes in 2.8.0]
-* xref:#_changes_in_2_7_0[Changes in 2.7.0]
-* xref:#_changes_in_2_6_0[Changes in 2.6.0]
-* xref:#_changes_in_2_5_0[Changes in 2.5.0]
-* xref:#_changes_in_2_4_0[Changes in 2.4.0]
-* xref:#_changes_in_2_2_0[Changes in 2.2.0]
-* xref:#_changes_in_2_1_1[Changes in 2.1.1]
-* xref:#_changes_in_2_1_0[Changes in 2.1.0]
+* xref:#changes-in-2-10-0[Changes in 2.10.0]
+* xref:#changes-in-2-9-0[Changes in 2.9.0]
+* xref:#changes-in-2-8-0[Changes in 2.8.0]
+* xref:#changes-in-2-7-0[Changes in 2.7.0]
+* xref:#changes-in-2-6-0[Changes in 2.6.0]
+* xref:#changes-in-2-5-0[Changes in 2.5.0]
+* xref:#changes-in-2-4-0[Changes in 2.4.0]
+* xref:#changes-in-2-2-0[Changes in 2.2.0]
+* xref:#changes-in-2-1-1[Changes in 2.1.1]
+* xref:#changes-in-2-1-0[Changes in 2.1.0]
+
+== Changes in 2.10.0
+
+=== Additions
+
+* Android 9 (P) support
+* Allow light filtering apps
+* Show additional info (user ID, email) when sharing with users with same display name
+* Support more options to enforce password when sharing publicly
+* Select all and inverse when uploading files
+* Sorting options in sharing view
+* Batched notifications for file deletions
+* Commit hash in settings
+* UI improvements, including: disable log in button when credentials are empty, warning to properly set camera folder in camera uploads
+
+=== Fixes
+
+* Some camera upload issues in Android 9 (P)
+* Fix eye icon not visible to show/hide password in public shares
+* Fix welcome wizard rotation
+
+== Changes in 2.9.0
+
+=== Additions
+
+* Switch Apache and jackrabbit deprecated network libraries to more modern and active library, {okhttp-url}[OkHttp] and {dav4jvm-url}[Dav4Android]
+* Search in current folder
+* Select all/inverse files
+* Improve available offline files synchronization and conflict resolution (Android 5 or higher required)
+* Sort files in file picker when uploading (contribution)
+* Access ownCloud files from files apps, even with files not downloaded
+* New login view
+* Show re-shares
+
+=== Fixes
+
+* Fix some crashes: when rebooting the device, when copying, moving files or choosing a folder within camera uploads feature, when creating private/public link.
+* Fix some failing downloads
+* Fix pattern lock being asked very often after disabling fingerprint lock
 
 == Changes in 2.8.0
 
