--- a/owncloudApp/src/main/res/values-ja-rJP/strings.xml
+++ b/owncloudApp/src/main/res/values-ja-rJP/strings.xml
@@ -1,5 +1,7 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
+  <string name="about_version">バージョン %1$s</string>
+  <string name="actionbar_search">このフォルダーを探す</string>
   <string name="actionbar_sync">アカウントを同期</string>
   <string name="actionbar_upload">アップロード</string>
   <string name="actionbar_upload_from_apps">他アプリからのコンテンツ</string>
@@ -13,12 +15,16 @@
   <string name="actionbar_descending">降順</string>
   <string name="actionbar_sort_title">ソート: </string>
   <string name="actionbar_sort_by_name">名前順</string>
+  <string name="actionbar_sort_by_date">最古 - 最新</string>
+  <string name="actionbar_sort_by_size">最小 - 最大</string>
   <string name="drawer_item_all_files">すべてのファイル</string>
   <string name="drawer_item_only_available_offline">オフラインが利用可能です</string>
   <string name="drawer_item_settings">設定</string>
   <string name="drawer_item_uploads_list">アップロード</string>
   <string name="drawer_close">閉じる</string>
   <string name="drawer_open">開く</string>
+  <string name="drawer_unavailable_free_storage">%1$s を使用中</string>
+  <string name="drawer_unavailable_used_storage">利用可能なストレージ利用状況はありません。</string>
   <string name="drawer_feedback">フィードバック</string>
   <string name="drawer_help">ヘルプ</string>
   <string name="prefs_category_general">一般</string>
@@ -119,6 +125,7 @@
   <string name="delete_account">アカウント削除</string>
   <string name="create_account">アカウントを作成</string>
   <string name="uploader_info_dirname">フォルダー名</string>
+  <string name="uploader_upload_in_progress_ticker">アップロード中…</string>
   <string name="uploader_upload_in_progress_content">%1$d%% アップロード中 %2$s</string>
   <string name="uploader_upload_succeeded_ticker">アップロード完了</string>
   <string name="uploader_upload_succeeded_content_single">%1$s は正常にアップロードされました</string>
@@ -193,6 +200,7 @@
   <string name="fingerprint_not_recognized">指紋認証に失敗しました。再度やり直してください。</string>
   <string name="fingerprint_success">指紋認証に成功しました</string>
   <string name="fingerprint_not_hardware_detected">このデバイスでは指紋認証はサポートされていません。</string>
+  <string name="fingerprint_not_granted_permissions">指紋認証は許可されていません。</string>
   <string name="media_notif_ticker">%1$s ミュージックプレーヤー</string>
   <string name="media_state_playing">%1$s (プレイ中)</string>
   <string name="media_state_loading">%1$s (読込中)</string>
@@ -269,6 +277,7 @@
   <string name="wait_checking_credentials">保存された資格情報をチェック</string>
   <string name="filedisplay_unexpected_bad_get_content">予期せぬ問題；他のアプリでファイルを選択してみてください。</string>
   <string name="filedisplay_no_file_selected">ファイルは選択されていません</string>
+  <string name="activity_chooser_title">リンクを送信</string>
   <string name="wait_for_tmp_copy_from_private_storage">プライベートストレージからファイルをコピー中</string>
   <string name="oauth_check_onoff">oAuth2でログイン</string>
   <string name="oauth_login_connection">OAuth2サーバーに接続中...</string>
@@ -309,6 +318,8 @@
   <string name="camera_video_upload_on_wifi">WiFi経由でのみ動画をアップロード</string>
   <string name="camera_upload_path">/CameraUpload</string>
   <string name="confirmation_disable_camera_uploads_title">確認</string>
+  <string name="proper_pics_folder_warning_camera_upload">あなたが撮った写真の保存先が、選択されたフォルダーであることを確認してください。そうでないと、あなたの写真を特定することができません。また写真は撮ってから少なくとも15分後にアップロードされます。</string>
+  <string name="proper_videos_folder_warning_camera_upload">あなたが撮った動画の保存先が、選択されたフォルダーであることを確認してください。そうでないと、あなたの動画を特定することができません。また動画は撮ってから少なくとも15分後にアップロードされます。</string>
   <string name="conflict_title">ファイルが競合</string>
   <string name="conflict_message">どちらのファイルを保存したいですか？両方のバージョンを選択した場合は、ファイル名の後ろに数字を追加したファイルのコピーを作成します。</string>
   <string name="conflict_keep_both">両方を保持</string>
@@ -472,12 +483,17 @@
   <string name="media_service_notification_channel_description">ミュージックプレイヤーを表示</string>
   <string name="file_sync_notification_channel_name">ファイル同期</string>
   <string name="file_sync_notification_channel_description">ファイル同期結果を見る</string>
+  <string name="button_no_thanks_name">いいえ、結構です</string>
+  <string name="button_later_name">あとで</string>
+  <string name="button_rate_now_name">今すぐ評価する</string>
   <plurals name="items_selected_count">
     <item quantity="other">%d個選択中</item>
   </plurals>
   <!--Welcome to oC intro features-->
   <string name="welcome_feature_skip_button">スキップ</string>
+  <string name="welcome_feature_3_title">複数アカウント</string>
   <string name="welcome_feature_4_title">カメラアップロード</string>
   <string name="welcome_feature_7_title">すべて選択</string>
   <string name="welcome_feature_8_title">オフラインが利用可能です</string>
+  <string name="no_borwser_installed_alert">ブラウザーがインストールされていません。安全なログインを許可するためにブラウザーをインストールしてください。</string>
 </resources>
