[tx] updated from transifex

--- a/owncloudApp/src/main/res/values-gl/strings.xml
+++ b/owncloudApp/src/main/res/values-gl/strings.xml
@@ -495,7 +495,7 @@ Descárgueo de aquí: %2$s</string>
   <string name="actionbar_privacy_policy">Política de privacidade</string>
   <string name="prefs_privacy_policy">Política de privacidade</string>
   <string name="privacy_policy_error">Produciuse un erro:</string>
-  <string name="service_unavailable">O servidor non está accesíbel</string>
+  <string name="service_unavailable">O servidor non é accesíbel</string>
   <string name="streaming_certificate_error">Non é posíbel iniciar o fluxo porque o certificado do servidor non é de confianza. A descarga do ficheiro comezará automaticamente</string>
   <string name="streaming_unrecognized_input">Este formato de vídeo non está admitido</string>
   <string name="streaming_file_not_found_error">Este ficheiro de vídeo xa non está dispoñíbel no servidor</string>
