--- a/owncloudApp/src/main/res/values-es/strings.xml
+++ b/owncloudApp/src/main/res/values-es/strings.xml
@@ -520,6 +520,7 @@
   <string name="media_service_notification_channel_description">Ver reproductor de música</string>
   <string name="file_sync_notification_channel_name">Sincronizado de archivo</string>
   <string name="file_sync_notification_channel_description">Ver el resultado de sincronizado de archivo</string>
+  <string name="clicks_to_be_developer">Está %1$d clics de distancia de habilitar los menús de desarrollador</string>
   <string name="rate_dialog_title">Puntúa %1$s la aplicación!</string>
   <string name="rate_dialog_description">Si disfrutas usando esta aplicación, ¿puedes dedicar un momento a valorarla?. Tus comentarios son muy importantes para nosotros.</string>
   <string name="button_no_thanks_name">No, Gracias</string>
