--- a/owncloudApp/src/main/res/values-zh-rCN/strings.xml
+++ b/owncloudApp/src/main/res/values-zh-rCN/strings.xml
@@ -1,6 +1,6 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
-  <string name="about_android">%1$s 为 Android</string>
+  <string name="about_android">%1$s Android版</string>
   <string name="about_version">版本 %1$s</string>
   <string name="actionbar_search">在此文件夹搜索</string>
   <string name="actionbar_sync">刷新帐户</string>
