--- a/docs/modules/ROOT/pages/index.adoc
+++ b/docs/modules/ROOT/pages/index.adoc
@@ -1,4 +1,8 @@
 = Using the ownCloud Android App
+:toc: right
+:toclevels: 1
+
+== Introduction
 
 Accessing your files on your ownCloud server via the Web interface is easy and convenient, as you can use any Web browser on any operating system without installing special client software.
 However, the ownCloud Android app offers some advantages over the Web interface:
