--- a/owncloudApp/src/main/res/values/strings.xml
+++ b/owncloudApp/src/main/res/values/strings.xml
@@ -281,7 +281,6 @@
     <string name="auth_can_not_auth_against_server">Cannot authenticate to this server</string>
     <string name="auth_account_does_not_exist">Account does not exist in the device yet</string>
 
-
     <string name="set_available_offline">Set as available offline</string>
     <string name="unset_available_offline">Unset as available offline</string>
     <string name="common_rename">Rename</string>
@@ -370,6 +369,7 @@
     <string name="error__upload__local_file_not_copied">%1$s could not be copied to %2$s local folder</string>
     <string name="prefs_camera_picture_upload_path_title">Picture upload path</string>
 
+    <string name="get_capabilities_error">An error occurred while trying to retrieve capabilities</string>
     <string name="share_link_no_support_share_api">Sorry, sharing is not enabled on your server. Please contact your
 		administrator.</string>
     <string name="share_link_file_no_exist">Unable to share. Please check whether the file exists</string>
