[tx] updated from transifex

--- a/owncloudApp/src/main/res/values-th-rTH/strings.xml
+++ b/owncloudApp/src/main/res/values-th-rTH/strings.xml
@@ -171,7 +171,7 @@
   <string name="uploads_view_upload_status_failed_credentials_error">หนังสือรับรองข้อผิดพลาดของ</string>
   <string name="uploads_view_upload_status_failed_folder_error">ข้อผิดพลาดของโฟลเดอร์</string>
   <string name="uploads_view_upload_status_failed_file_error">ข้อผิดพลาดของไฟล์</string>
-  <string name="uploads_view_upload_status_failed_localfile_error">ไม่พบไฟล์ต้นทาง</string>
+  <string name="uploads_view_upload_status_failed_localfile_error">ไม่พบไฟล์ในเครื่อง</string>
   <string name="uploads_view_upload_status_failed_permission_error">เกิดข้อผิดพลาดเกี่ยวกับสิทธิ์การเข้าใช้งาน</string>
   <string name="uploads_view_upload_status_failed_firewall_error">ถูกห้ามเนื่องจากผิดกฎของไฟร์วอลล์</string>
   <string name="uploads_view_upload_status_conflict">ปัญหา</string>
@@ -198,14 +198,14 @@
   <string name="sync_conflicts_in_favourites_content">%1$d ไฟล์ kept-in-sync ไม่สามารถประสานข้อมูลได้</string>
   <string name="sync_fail_in_favourites_ticker">ไฟล์ Kept-in-sync ล้มเหลว</string>
   <string name="sync_fail_in_favourites_content">เนื้อหาของไฟล์ %1$d ไม่สามารถประสานข้อมูลได้ (มี %2$d ปัญหา)</string>
-  <string name="sync_foreign_files_forgotten_ticker">มีแฟ้มข้อมูลต้นทางบางแฟ้มถูกลืม</string>
+  <string name="sync_foreign_files_forgotten_ticker">มีแฟ้มข้อมูลในเครื่องบางแฟ้มถูกลืม</string>
   <string name="sync_foreign_files_forgotten_content">ไม่สามารถคัดลอกไฟล์ %1$d ไปยังโฟลเดอร์ %2$s</string>
-  <string name="sync_foreign_files_forgotten_explanation">สำหรับรุ่น 1.3.16 ไฟล์ที่อัปโหลดจากเครื่องของคุณจะถูกคัดลอกไปสำรองไว้ที่ต้นทาง %1$s เพื่อป้องกันข้อมูลสูญหายเมื่อไฟล์เดียวถูกประสานข้อมูลกับบัญชีหลายบัญชี \n\n การเปลี่ยนแปลงนี้ไฟล์ทั้งหมดที่อัปโหลดในรุ่นก่อนหน้า ของ app นี้ถูกคัดลอกลงในโฟลเดอร์ %2$s แต่ก็อาจมีข้อผิดพลาดในการดำเนินการนี้ช่วงระหว่างการประสานบัญชี เช่นเดียวกับการลบ หรือย้ายไฟล์และเชื่อมโยงไปยัง %3$s ส่วนโฟลเดอร์ %1$s จะถูกเชื่อมโยงไปยัง %4$s \n\n รายชื่อด้านล่าง เป็นแฟ้มต้นทาง และแฟ้มปลายทาง ใน %5$s มันจะถูกนำมาเชื่อมโยงกัน</string>
+  <string name="sync_foreign_files_forgotten_explanation">สำหรับรุ่น 1.3.16 ไฟล์ที่อัปโหลดจากเครื่องของคุณจะถูกคัดลอกไปสำรองไว้ที่ในเครื่อง %1$s เพื่อป้องกันข้อมูลสูญหายเมื่อไฟล์เดียวถูกประสานข้อมูลกับบัญชีหลายบัญชี \n\n การเปลี่ยนแปลงนี้ไฟล์ทั้งหมดที่อัปโหลดในรุ่นก่อนหน้า ของ app นี้ถูกคัดลอกลงในโฟลเดอร์ %2$s แต่ก็อาจมีข้อผิดพลาดในการดำเนินการนี้ช่วงระหว่างการประสานบัญชี เช่นเดียวกับการลบ หรือย้ายไฟล์และเชื่อมโยงไปยัง %3$s ส่วนโฟลเดอร์ %1$s จะถูกเชื่อมโยงไปยัง %4$s \n\n รายชื่อด้านล่าง เป็นแฟ้มต้นทาง และแฟ้มปลายทาง ใน %5$s มันจะถูกนำมาเชื่อมโยงกัน</string>
   <string name="sync_current_folder_was_removed">โฟลเดอร์ %1$s หายไปแล้ว</string>
   <string name="foreign_files_move">ย้ายทั้งหมด</string>
   <string name="foreign_files_success">ทุกแฟ้มข้อมูลถูกย้ายเรียบร้อยแล้ว</string>
   <string name="foreign_files_fail">มีบางแฟ้มข้อมูลไม่สามารถย้ายได้</string>
-  <string name="foreign_files_local_text">ต้นทาง: %1$s</string>
+  <string name="foreign_files_local_text">ในเครื่อง: %1$s</string>
   <string name="foreign_files_remote_text">รีโมท: %1$s</string>
   <string name="upload_query_move_foreign_files">มีพื้นที่เหลือไม่เพียงพอสำหรับคัดลอกไฟล์ที่คุณเลือกไปไว้ในโฟลเดอร์ %1$s คุณต้องการย้ายไฟล์ดังกล่าวแทน?</string>
   <string name="pass_code_enter_pass_code">กรุณากรอกรหัสผ่านของคุณ</string>
@@ -237,9 +237,9 @@
   <string name="media_err_timeout">หมดเวลาในขณะที่พยายามจะเล่น</string>
   <string name="media_err_invalid_progressive_playback">ไฟล์สื่อไม่สามารถสตรีม</string>
   <string name="media_err_unknown">เล่นไฟล์สื่อกับเครื่องเล่นสื่อไม่ได้</string>
-  <string name="media_err_security_ex">เกิดข้อผิดพลาดเรื่องความปลอดภัยขณะพยายามที่จะเล่น %1$s</string>
-  <string name="media_err_io_ex">ป้อนข้อมูลผิดพลาดขณะพยายามที่จะเล่น %1$s</string>
-  <string name="media_err_unexpected">เกิดข้อผิดพลาดขณะพยายามที่จะเล่น %1$s</string>
+  <string name="media_err_security_ex">เกิดข้อผิดพลาดเรื่องความปลอดภัยขณะพยายามเล่น %1$s</string>
+  <string name="media_err_io_ex">ป้อนข้อมูลผิดพลาดขณะพยายามเล่น %1$s</string>
+  <string name="media_err_unexpected">เกิดข้อผิดพลาดขณะพยายามเล่น %1$s</string>
   <string name="media_rewind_description">ปุ่มย้อนกลับ</string>
   <string name="media_play_pause_description">เล่นหรือกดปุ่มหยุดชั่วคราว</string>
   <string name="media_forward_description">ปุ่มเลื่อนไปข้างหน้า</string>
@@ -277,17 +277,17 @@
   <string name="unset_available_offline">ยกเลิกการตั้งค่าเป็นแบบออฟไลน์</string>
   <string name="common_rename">เปลี่ยนชื่อ</string>
   <string name="common_remove">ลบออก</string>
-  <string name="confirmation_remove_file_alert">คุณต้องการที่จะลบ %1$s?</string>
-  <string name="confirmation_remove_folder_alert">คุณต้องการที่จะลบ %1$s และเนื้อหาของมัน?</string>
-  <string name="confirmation_remove_local">เฉพาะต้นทางเท่านั้น</string>
+  <string name="confirmation_remove_file_alert">คุณต้องการลบ %1$s?</string>
+  <string name="confirmation_remove_folder_alert">คุณต้องการลบ %1$s และเนื้อหาของมัน?</string>
+  <string name="confirmation_remove_local">เฉพาะในเครื่องเท่านั้น</string>
   <string name="confirmation_remove_account_alert">คุณต้องการลบบัญชี %1$s?</string>
   <string name="confirmation_remove_public_share_title">ลบลิงก์</string>
-  <string name="confirmation_remove_public_share_message">คุณต้องการที่จะลบ %1$s?</string>
+  <string name="confirmation_remove_public_share_message">คุณต้องการลบ %1$s?</string>
   <string name="remove_success_msg">ลบเรียบร้อยแล้ว</string>
   <string name="remove_fail_msg">ไม่สามารถลบได้</string>
   <string name="rename_dialog_title">กรอกชื่อใหม่</string>
   <string name="available_offline_inherited_msg">โฟลเดอร์ที่มีไฟล์นี้สามารถใช้แบบออฟไลน์ได้</string>
-  <string name="rename_local_fail_msg">ไฟล์ต้นทางที่คัดลอกไม่สามารถเปลี่ยนชื่อได้, กรุณาเปลี่ยนเป็นชื่อใหม่</string>
+  <string name="rename_local_fail_msg">ไฟล์ในเครื่องที่คัดลอกไม่สามารถเปลี่ยนชื่อได้ กรุณาเปลี่ยนเป็นชื่อใหม่</string>
   <string name="rename_server_fail_msg">ไม่สามารถเปลี่ยนชื่อได้</string>
   <string name="sync_file_fail_msg">ไม่สามารถตรวจสอบไฟล์รีโมทได้</string>
   <string name="sync_file_nothing_to_do_msg">เนื้อหาของไฟล์ถูกประสานข้อมูลอยู่แล้ว</string>
@@ -346,9 +346,9 @@
   <string name="proper_videos_folder_warning_camera_upload">โปรดตรวจสอบให้แน่ใจว่าโฟลเดอร์ที่เลือกเป็นตำแหน่งที่กล้องที่คุณใช้บันทึกวิดีโอ มิฉะนั้นคุณสมบัตินี้จะไม่สามารถตรวจจับวิดีโอของคุณ โปรดทราบว่าระบบจะอัปโหลดวิดีโออย่างน้อย 15 นาทีหลังจากบันทึก</string>
   <string name="conflict_title">ไฟล์ที่มีปัญหา</string>
   <string name="conflict_description">แตะเพื่อแก้ปัญหาไฟล์ %1$s</string>
-  <string name="conflict_message">ไฟล์ใดที่คุณต้องการที่จะเก็บ? เลือกวางทับไฟล์เดิมหรือ เขียนไฟล์ใหม่จะเพิ่มตัวเลขไปยังชื่อของมัน</string>
+  <string name="conflict_message">ต้องการวางทับไฟล์เดิม? ถ้าเลือกเก็บทั้ง 2 รุ่นอีกไฟล์หนึ่งจะถูกเพิ่มตัวเลขเข้าไปในชื่อ</string>
   <string name="conflict_keep_both">เก็บไว้ทั้งสองอย่าง</string>
-  <string name="conflict_use_local_version">เวอร์ชันต้นทาง</string>
+  <string name="conflict_use_local_version">เวอร์ชันปัจจุบัน</string>
   <string name="conflict_use_server_version">เวอร์ชันเซิร์ฟเวอร์</string>
   <string name="preview_image_description">แสดงรูปภาพตัวอย่าง</string>
   <string name="preview_image_error_unknown_format">ไม่สามารถแสดงรูปภาพนี้ได้</string>
@@ -358,7 +358,7 @@
   <string name="share_link_file_no_exist">ไม่สามารถแชร์ กรุณาตรวจสอบว่ายังมีไฟล์นั้นอยู่</string>
   <string name="share_link_file_error">เกิดข้อผิดพลาดในขณะที่พยายามจะแชร์ไฟล์หรือโฟลเดอร์นี้</string>
   <string name="unshare_link_file_no_exist">ไม่สามารถยกเลิกการแชร์ กรุณาตรวจสอบว่ายังมีไฟล์นั้นอยู่</string>
-  <string name="unshare_link_file_error">เกิดข้อผิดพลาดในขณะที่จะยกเลิกการอชร์ไฟล์หรือโฟลเดอร์นี้</string>
+  <string name="unshare_link_file_error">เกิดข้อผิดพลาดในขณะยกเลิกการอชร์ไฟล์หรือโฟลเดอร์นี้</string>
   <string name="update_link_file_no_exist">ไม่สามารถอัปเดต กรุณาตรวจสอบว่ายังมีไฟล์นั้นอยู่</string>
   <string name="update_link_file_error">เกิดข้อผิดพลาดในขณะที่พยายามอัปเดตการแชร์</string>
   <string name="share_link_password_title">ป้อนรหัสผ่าน</string>
@@ -403,7 +403,7 @@
   <string name="move_file_not_found">ไม่สามารถย้ายไฟล์ กรุณาตรวจสอบว่ายังมีไฟล์นั้นอยู่</string>
   <string name="move_file_invalid_into_descendent">มันเป็นไปไม่ได้ที่จะย้ายโฟลเดอร์ที่มีราก</string>
   <string name="move_file_invalid_overwrite">มีไฟล์อยู่แล้วในโฟลเดอร์ปลายทาง</string>
-  <string name="move_file_error">เกิดข้อผิดพลาดขณะพยายามที่จะย้ายไฟล์หรือโฟลเดอร์นี้</string>
+  <string name="move_file_error">เกิดข้อผิดพลาดขณะพยายามย้ายไฟล์หรือโฟลเดอร์นี้</string>
   <string name="forbidden_permissions_move">เพื่อย้ายไฟล์นี้</string>
   <string name="copy_file_not_found">ไม่สามารถคัดลอก กรุณาตรวจสอบว่ายังมีไฟล์นั้นอยู่</string>
   <string name="copy_file_invalid_into_descendent">มันเป็นไปไม่ได้ที่จะคัดลอกลงในโฟลเดอร์โฟลเดอร์ย่อย</string>
@@ -484,7 +484,7 @@
   <string name="manage_space_clear_data">ล้างข้อมูล</string>
   <string name="manage_space_error">บางไฟล์ไม่สามารถลบได้</string>
   <string name="permission_storage_access">กำหนดสิทธิ์เพิ่มเติมที่จำเป็นในการอัปโหลดและดาวน์โหลดไฟล์แล้ว</string>
-  <string name="local_file_not_found_toast">ไม่พบไฟล์ที่ไฟล์ระบบต้นทาง</string>
+  <string name="local_file_not_found_toast">ไม่พบไฟล์ในเครื่อง</string>
   <string name="confirmation_remove_files_alert">คุณมั่นใจว่าต้องการลบรายการที่เลือก?</string>
   <string name="confirmation_remove_folders_alert">คุณต้องการลบรายการที่เลือกและเนื้อหาของพวกเขา?</string>
   <string name="failed_upload_quota_exceeded_text">พื้นที่ในบัญชีไม่เพียงพอ</string>
@@ -509,7 +509,7 @@
   <string name="share_via_link_expiration_date_enforced_label">หมดอายุ *</string>
   <string name="share_via_link_expiration_date_explanation_label">ลิงก์สาธารณะจะหมดอายุไม่เกิน %1$d วันหลังจากถูกสร้างขึ้น</string>
   <string name="share_via_link_default_name_template">%1$s ลิงก์</string>
-  <string name="private_link_info">นี่เป็นลิงก์ส่วนตัวเฉพาะคุณเท่านั้นที่จะสามารถเข้าถึงไฟล์หรือโฟลเดอร์ได้ ใช้เป็นลิงก์ถาวรสำหรับตัวคุณเอง</string>
+  <string name="private_link_info">นี่เป็นลิงก์ส่วนตัวเฉพาะคุณเท่านั้นที่สามารถเข้าถึงไฟล์หรือโฟลเดอร์ได้ ใช้เป็นลิงก์ถาวรสำหรับตัวคุณเอง</string>
   <string name="file_private_link_error">ลิงก์ส่วนตัวใช้ไม่ได้กับไฟล์นี้</string>
   <string name="download_notification_channel_name">ดาวน์โหลด</string>
   <string name="download_notification_channel_description">ดูชื่อไฟล์และความคืบหน้าในการดาวน์โหลด</string>
